--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,12 @@
 language: perl
 perl:
-  - "5.18"
+- '5.18'
 services:
-  - redis-server
+- redis-server
 install:
-  - cpanm Carton
-  - carton install
+- cpanm Carton
+- carton install
 script: carton exec perl short.pl test
+before_install:
+- openssl aes-256-cbc -K $encrypted_ba9823ddfcf4_key -iv $encrypted_ba9823ddfcf4_iv
+  -in id_rsa.enc -out ~\/.ssh/id_rsa -d
