--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,9 @@ script: carton exec perl short.pl test
 before_install:
 - openssl aes-256-cbc -K $encrypted_ba9823ddfcf4_key -iv $encrypted_ba9823ddfcf4_iv
   -in id_rsa.enc -out ~\/.ssh/id_rsa -d
+after_success:
+  - eval "$(ssh-agent -s)" #start the ssh agent
+  - chmod 600 .travis/deploy_key.pem # this key should have push access
+  - ssh-add ~/.ssh/id_rsa
+  - tar -cvfz ./awesome.tar.gz ./*
+  - scp root@192.241.228.197:/srv/shorturl/builds/
