--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,8 @@ services:
 - redis-server
 install:
 - cpanm Carton
-- carton install
+- carton bundle
+- carton install --cached --deployment
 script: carton exec perl short.pl test
 before_install:
 - openssl aes-256-cbc -K $encrypted_ba9823ddfcf4_key -iv $encrypted_ba9823ddfcf4_iv
@@ -14,5 +15,4 @@ after_success:
   - eval "$(ssh-agent -s)" #start the ssh agent
   - chmod 600 ./id_rsa # this key should have push access
   - ssh-add ./id_rsa
-  - tar -cvfz ./awesome.tar.gz ./*
-  - scp root@192.241.228.197:/srv/shorturl/builds/
+  - deploy.sh
