--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ install:
 - cpanm Carton
 - carton bundle
 - carton install --cached --deployment
-script: cd shorturl; carton exec perl script/shorturl test;
+script: cd shorturl; carton exec perl script/shorturl test; cd ..;
 before_install:
 - openssl aes-256-cbc -K $encrypted_ba9823ddfcf4_key -iv $encrypted_ba9823ddfcf4_iv
   -in id_rsa.enc -out ./id_rsa -d
