--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,9 @@ install:
 - carton install
 - carton bundle
 - carton install --cached --deployment
-script: cd shorturl; carton exec perl script/shorturl test; cd ..;
+script:
+- ./scripts/lint.sh
+- cd shorturl; carton exec perl script/shorturl test; cd ..;
 before_install:
 - openssl aes-256-cbc -K $encrypted_ba9823ddfcf4_key -iv $encrypted_ba9823ddfcf4_iv
   -in id_rsa.enc -out ./id_rsa -d
